testsuite/tests/pmcheck/complete_sigs/completesig04.stderr

completesig04.hs:6:1: error:
    • Cannot form a group of complete patterns from patterns ‘Just’ and ‘L’ as they match different type constructors (‘Maybe’ resp. ‘E’)
    • In {-# COMPLETE Just, L #-}
